# Rust-Rest-PSQL-Email

./: Cargo.toml
src/: email.tmpl  main.rs
