[package]
name = "grafana-signup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.158", features = ["derive"]}
tokio = {version = "1.26.0", features = ["rt-multi-thread", "macros",] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
lettre = "0.10.3"
axum = "0.6.12"
chrono = "0.4.25"
tokio-postgres = {version = "0.7.8", features = ["with-chrono-0_4"]}

